--- a/ficha.html
+++ b/ficha.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ficha de Vampiro: A Máscara</title>
-  <link rel="stylesheet" href="estilo.css">
+  <link rel="stylesheet" href="style.css">
   <script defer src="ficha-vampiro.js"></script>
 </head>
 <body>
@@ -142,3 +142,4 @@
 
 </body>
 </html>
+
