--- a/ficha.html
+++ b/ficha.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <script defer src="ficha-vampiro.js"></script>
 </head>
+
 <body>
 
   <header>
@@ -61,20 +62,41 @@
           <label>Briga <input type="number" min="0" max="5" id="briga"></label>
           <label>Empatia <input type="number" min="0" max="5" id="empatia"></label>
           <label>Intimidação <input type="number" min="0" max="5" id="intimidacao"></label>
+          <label>Esquiva <input type="number" min="0" max="5" id="intimidacao"></label>
+          <label>Expressão <input type="number" min="0" max="5" id="intimidacao"></label>
+          <label>Liderança <input type="number" min="0" max="5" id="intimidacao"></label>
+          <label>Manha <input type="number" min="0" max="5" id="intimidacao"></label>
+          <label>Lábia <input type="number" min="0" max="5" id="intimidacao"></label>
+        </div>
+        </div>
+        </div>
+        </div>
+        </div>
         </div>
         <div>
           <h3>Perícias</h3>
+          <label>Empatia c/ Animais <input type="number" min="0" max="5" id="conducao"></label>
+          <label>Ofícios <input type="number" min="0" max="5" id="conducao"></label>
           <label>Condução <input type="number" min="0" max="5" id="conducao"></label>
+          <label>Etiqueta <input type="number" min="0" max="5" id="conducao"></label>
+          <label>Armas de fogo <input type="number" min="0" max="5" id="conducao"></label>
+          <label>Armas Brancas <input type="number" min="0" max="5" id="conducao"></label>
+          <label>Performance <input type="number" min="0" max="5" id="conducao"></label>
           <label>Segurança <input type="number" min="0" max="5" id="seguranca"></label>
           <label>Furtividade <input type="number" min="0" max="5" id="furtividade"></label>
-          <label>Armas Brancas <input type="number" min="0" max="5" id="armas_brancas"></label>
           <label>Sobrevivência <input type="number" min="0" max="5" id="sobrevivencia"></label>
         </div>
         <div>
           <h3>Conhecimentos</h3>
+          <label>Acadêmicos <input type="number" min="0" max="5" id="computador"></label>
           <label>Computador <input type="number" min="0" max="5" id="computador"></label>
+          <label>Finaças <input type="number" min="0" max="5" id="computador"></label>
           <label>Investigação <input type="number" min="0" max="5" id="investigacao"></label>
+          <label>Direito <input type="number" min="0" max="5" id="computador"></label>
+          <label>Linguistica <input type="number" min="0" max="5" id="computador"></label>
+          <label>Medicina <input type="number" min="0" max="5" id="computador"></label>
           <label>Ocultismo <input type="number" min="0" max="5" id="ocultismo"></label>
+          <label>Política <input type="number" min="0" max="5" id="computador"></label>
           <label>Ciência <input type="number" min="0" max="5" id="ciencia"></label>
         </div>
       </div>
